# QmBlurView_

./: .gitattributes  .gitignore  LICENSE  README.md  README_fr.md  README_ru.md  README_zh.md  build.gradle  config.gradle  gradle.properties  jitpack.yml  settings.gradle
.github/: FUNDING.yml
.github/workflows/: publish.yml
ButtomNavigation/: build.gradle
Navigation/: build.gradle
Navigation/src/main/java/com/qmdeve/blurview/: TabView.java  TabViewManager.java
Navigation/src/main/java/com/qmdeve/blurview/util/: MenuUtils.java
Navigation/src/main/java/com/qmdeve/blurview/widget/: BlurBottomNavigationView.java
Navigation/src/main/res/values/: attrs.xml
QmBlurView/: build.gradle
QmBlurView/src/main/cpp/: BlurNative.c
QmBlurView/src/main/java/com/qmdeve/blurview/: BlurNative.java
QmBlurView/src/main/java/com/qmdeve/blurview/base/: BaseBlurView.java  (+1 more)
Transform/: build.gradle
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_blur_intensity.xml  activity_main.xml  activity_skia_blur.xml
core/: build.gradle
core/src/main/cpp/: BlurNative.c  CMakeLists.txt
core/src/main/java/com/qmdeve/blurview/: Blur.java  BlurNative.java
core/src/main/res/drawable/: ic_add.xml
core/src/main/res/values/: attrs.xml
gradle/: libs.versions.toml
navigation/: build.gradle
navigation/src/main/java/com/qmdeve/blurview/: TabView.java  TabViewManager.java
transform/: build.gradle
(+23 files in other folders)
